# WriteYourselfAScheme

./: README  SchemeInterpreter.cabal  Setup.hi
.dist-buildwrapper/src/: .Main.hs.bwinfo  .Main.hs.bwusage
.dist-buildwrapper/src/Interpreter/: .Common.hs.bwinfo  .Common.hs.bwusage  .Evaluating.hs.bwinfo  .Evaluating.hs.bwusage  .IO.hs.bwinfo  .Parsing.hs.bwinfo  .Parsing.hs.bwusage  .Predef.hs.bwinfo  .Predef.hs.bwusage  .REPL.hs.bwinfo  .REPL.hs.bwusage  Parsing.hs  REPL.hs
.dist-buildwrapper/test/: .MainTest.hs.bwinfo  .MainTest.hs.bwusage  .ParserTest.bwinfo  .ParserTest.hs.bwinfo  .parsers.hs.bwinfo  .parsers.hs.bwusage  ParserTest.hs
.dist-buildwrapper/test/Interpreter/: .ParsingTest.hs.bwinfo  ParsingTest.hs
src/: Main.hs
src/Interpreter/: Common.hs  Evaluating.hs  Predef.hs
test/: MainTest.hs
